--- a/install/Dockerfile-p
+++ b/install/Dockerfile-p
@@ -8,6 +8,7 @@ RUN apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Jupyter Notebook and other useful stuff.
+# TODO install torchvision
 RUN pip install \
 	jupyter \
 	torchtext \
