--- a/install/Dockerfile
+++ b/install/Dockerfile
@@ -1,32 +1,51 @@
-# Start from a PyTorch base image with GPU support
-FROM pytorch/pytorch:latest
+#This dockerfile also supports tensorflow/tensorflow:latest-jupyter and ubuntu-latest
+ARG BASE_IMAGE=pytorch/pytorch:latest
+FROM ${BASE_IMAGE}
 
 # Update the system and install necessary software
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 RUN apt-get install -y \
     python3-pip \
+    neovim \
     gosu \
     xdg-utils \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Jupyter Notebook and other useful stuff.
+# TODO add your additional python dependencies here
 RUN pip install \
 	jupyter \
-	torchtext \
+	pandas \
+	numpy \
+	matplotlib \
+	seaborn \
+	scikit-learn \
+	xgboost \
+	lightgbm \
+	scipy \
+	statsmodels \
 	scikit-llm \
-	matplotlib 
+	transformers \
+	datasets \
+	tokenizers \
+	huggingface_hub \
+	accelerate 
 
 # Set up the working directory
 WORKDIR /workspace
 
 # Change the ownership and permissions of /.local and other directories
-RUN mkdir /.local /.jupyter /.config
+# This helps Jupyter notebooks run smoothly
+RUN mkdir -p /.local /.jupyter /.config
 RUN chmod -R 777 /.local /.config /.jupyter /workspace
 
-# Copy the entrypoint script and give execute permission
-# the lines below are safe to remove if you are not using open-interpreter
+# Setup the entrypoint, this is to help open-interpreter run smoothly
+# since it wants to be installed in userland
+ARG SETUP_ENTRYPOINT=false
+ENV SETUP_ENTRYPOINT=${SETUP_ENTRYPOINT}
 COPY install/entrypoint.sh /entrypoint.sh
+COPY install/install_interpreter.sh /install_interpreter.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
